RESOLVED FIXED69004
REGRESSION(r96060) It made plugins/js-from-destroy.html crash in debug mode
https://bugs.webkit.org/show_bug.cgi?id=69004
Summary REGRESSION(r96060) It made plugins/js-from-destroy.html crash in debug mode
Attachments
Move DocumentLoader null check back to SubresourceLoader::create() (3.38 KB, patch)
2011-09-28 11:06 PDT, Nate Chapin
no flags
Nate Chapin
Comment 1 2011-09-28 09:53:09 PDT
The GTK stack is empty, and the Leopard stack doesn't yet make sense to me. The Qt stack looks to me like ResourceLoader::m_documentLoader is possible due to an unintentional re-ordering in r96060. I'll get a patch ready for that.
Nate Chapin
Comment 2 2011-09-28 09:55:47 PDT
(In reply to comment #1) > The GTK stack is empty, and the Leopard stack doesn't yet make sense to me. > > The Qt stack looks to me like ResourceLoader::m_documentLoader is possible due to an unintentional re-ordering in r96060. I'll get a patch ready for that. Wow, I fail at proofreading. That should have been: The Qt stack looks to me like ResourceLoader::m_documentLoader is null, which is possible due to an unintentional re-ordering in r96060.
Nate Chapin
Comment 3 2011-09-28 11:06:22 PDT
Created attachment 109039 [details] Move DocumentLoader null check back to SubresourceLoader::create()
WebKit Review Bot
Comment 4 2011-09-28 12:46:17 PDT
Comment on attachment 109039 [details] Move DocumentLoader null check back to SubresourceLoader::create() Rejecting attachment 109039 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: cripts/webkitpy/common/system/executive.py", line 420, in run_command close_fds=self._should_close_fds()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/system/executive.py", line 476, in popen return subprocess.Popen(*args, **kwargs) File "/usr/lib/python2.6/subprocess.py", line 623, in __init__ errread, errwrite) File "/usr/lib/python2.6/subprocess.py", line 1141, in _execute_child raise child_exception TypeError: execv() arg 2 must contain only strings Full output: http://queues.webkit.org/results/9888257
Csaba Osztrogonác
Comment 5 2011-09-28 12:54:47 PDT
Comment on attachment 109039 [details] Move DocumentLoader null check back to SubresourceLoader::create() Clearing flags on attachment: 109039 Committed r96249: <http://trac.webkit.org/changeset/96249>
Csaba Osztrogonác
Comment 6 2011-09-28 12:54:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.