Fix a regression in r96060. ResourceLoader shouldn't get initialized with a null DocumentLoader. https://bugs.webkit.org/show_bug.cgi?id=69004

Patch by Nate Chapin <japhet@chromium.org> on 2011-09-28
Reviewed by Csaba Osztrogonác.

This should fix a debug crash in some platforms in
plugins/js-from-destroy.html

* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::init): Move the activeDocumentLoader() null checks back
    to SubresouceLoader::create().
* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::create):

Canonical link: https://commits.webkit.org/85018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96249 268f45cc-cd09-0410-ab3c-d52691b4dbfc